# python-asyncio-example

./: README.md  main.py  worker.py
api_requests_example/: main.py
http_load_testing_example/: README.md  endpoints_localhost.py  loadtest_config.py  pyproject.toml  run_load_test.py  run_loadtest.py  worker.py
http_load_testing_example/endpoints/: deposit_resource.py  get_gold.py  get_oil.py  get_task.py  get_water.py
