[tool.poetry]
name = "http-load-testing-example"
version = "0.1.0"
description = ""
authors = ["J-sephB-lt-n <joseph.jazz.bolton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
flask = "^3.0.3"
gevent = "^24.2.1"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
